# fmi-chroma

./: .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  fmi-chroma.code-workspace  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.gemini/: settings.json
.windsurf/: mcp_config.json
.windsurf/rules/: devcontainer.md  pre-commit.md
docs/: index.md  modules.md
src/fmi_chroma/: git2chroma.py  list_collections.py  ompython.py  pdf2text.py  run_mcp.py  text2chroma.py
src/fmi_chroma/notebooks/: .jupytext.toml  demo.ipynb  demo.py
tests/: test_foo.py
